fixed createTargetComponent error:java.lang.NullPointerException inclass com.jdon.jivejdon.domain.model.account.Account
Co-authored-by: Copilot <copilot@github.com>